--- a/client/app/index.html
+++ b/client/app/index.html
@@ -66,6 +66,8 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/add.js"></script>
+        <script src="scripts/controllers/modify.js"></script>
         <!-- endbuild -->
 </body>
 </html>
