--- a/client/app/index.html
+++ b/client/app/index.html
@@ -13,6 +13,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <base href="/">
   </head>
   <body ng-app="carlpapaApp">
     <!--[if lt IE 7]>
