--- a/client/app/index.html
+++ b/client/app/index.html
@@ -71,6 +71,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/add.js"></script>
         <script src="scripts/controllers/modify.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <!-- endbuild -->
 </body>
 </html>
