--- a/client/app/index.html
+++ b/client/app/index.html
@@ -51,8 +51,6 @@
     <div ui-view=""></div>
     </div>
 
-    <script src="//cdn.auth0.com/js/lock-7.5.min.js"></script>    
-
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -64,11 +62,15 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="bower_components/materialize/bin/materialize.js"></script>
-    <script src="bower_components/angular-jwt/dist/angular-jwt.js"></script>
-    <script src="bower_components/angular-storage/dist/angular-storage.js"></script>
+    <script src="bower_components/materialize/bin/materialize.js"></script>    
     <!-- endbower -->
     <!-- endbuild -->
+
+    <!-- Auth0 Lock script and AngularJS module -->
+    <script src="//cdn.auth0.com/js/lock-7.5.min.js"></script>
+    <!-- angular-jwt and angular-storage -->
+    <script type="text/javascript" src="//cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js"></script>
+    <script type="text/javascript" src="//cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
 
     <script src="//cdn.auth0.com/w2/auth0-angular-4.js"> </script>
 
